--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@ layout: landing
 							<h2>{{ site.title }}</h2>
 							<p>{{ site.description | markdownify }}</p>
 							<ul class="actions">
-								<li><a href="#" class="button special">Activate</a></li>
+								<li><a href="/blog/" class="button special">Blog</a></li>
+								<li><a href="{{ site.social.dribbble }}" class="button special">Design</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
