--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@ layout: landing
 							<p>{{ site.description | markdownify }}</p>
 							<ul class="actions">
 								<li><a href="/blog/" class="button special">Blog</a></li>
-								<li><a href="{{ site.social.dribbble }}" class="button special">Design</a></li>
+								<li><a target="_blank" href="{{ site.social.dribbble }}" class="button special">Design</a></li>
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<!-- <a href="#one" class="more scrolly">Learn More</a> -->
 					</section>
 
 				<!-- One -->
+				<!--
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
@@ -30,8 +31,9 @@ layout: landing
 							</ul>
 						</div>
 					</section>
-
+ 				-->
 				<!-- Two -->
+				<!--
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
@@ -55,8 +57,10 @@ layout: landing
 							</div>
 						</section>
 					</section>
-
+				-->
+				
 				<!-- Three -->
+				<!--
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
@@ -92,8 +96,10 @@ layout: landing
 							</ul>
 						</div>
 					</section>
+				-->
 
 				<!-- CTA -->
+				<!--
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
@@ -106,3 +112,4 @@ layout: landing
 							</ul>
 						</div>
 					</section>
+				-->
